--- a/app/views/pages/two.html.erb
+++ b/app/views/pages/two.html.erb
@@ -1,1 +1,1 @@
-<img src="/assets/images/CapturaDePantalla.png" alt="Captura de pantalla">
+<%= image_tag("captura_de_pantalla.png", :alt => "captura de pantalla") %>
